--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
