--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
