--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,7 +22,8 @@
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.12"
+    "swiper": "^11.1.12",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
