--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.12",
     "zustand": "^5.0.1"
   },
